# va-status

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml
configuration/: base.yaml
crates/va-status-server/: Cargo.toml
crates/va-status-server/migrations/: 20240101000000_create_services_table.sql  20240101000001_create_incidents_table.sql
crates/va-status-server/src/: config.rs  db.rs  error.rs  lib.rs  main.rs  models.rs  routes.rs
migrations/: 20260305000000_initial_setup.sql
src/: configuration.rs  error.rs  lib.rs  main.rs  models.rs  startup.rs
src/routes/: health_check.rs  mod.rs  services.rs
tests/: health_check.rs
