[package]
name = "va-paste"
version = "0.1.0"
edition = "2024"

[dependencies]
[workspace]
members = [
    "crates/va-status-server",
]

[workspace.dependencies]
axum = "0.7"
tokio = "1"
sqlx = "0.7"
serde = "1.0"
serde_json = "1.0"
tower-http = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = "1.0"
chrono = "0.4"
dotenvy = "0.15"
anyhow = "1.0"
thiserror = "1.0"
reqwest = "0.11"

# This is a placeholder for the main application, if va-paste is not the main app.
# If va-paste is the main app, its dependencies should be here.
# For now, we assume va-status-server is a new, independent service.
reqwest = { version = "0.11", features = ["json"] }